--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,11 +67,13 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <EditText
+            android:id="@+id/edit_result_name"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#87FF5B" />
         <EditText
+            android:id="@+id/edit_result_people"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
