--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이름: "/>
+            android:text="이름: "
+            android:layout_marginRight="10dp"/>
         <EditText
             android:id="@+id/edit_name"
             android:layout_width="match_parent"
@@ -25,38 +27,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="인원: "/>
+            android:text="인원: "
+            android:layout_marginRight="10dp"/>
         <EditText
-            android:id="@+id/edit_people"
+            android:id="@+id/edit_count"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/btn_reset"
+            android:id="@+id/btn_init"
+            android:layout_weight="1"
+            android:textSize="9sp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:text="초기화"/>
         <Button
-            android:id="@+id/btn_input"
+            android:id="@+id/btn_insert"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:text="입력"/>
         <Button
-            android:id="@+id/btn_research"
+            android:id="@+id/btn_update"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="수정"/>
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제"/>
+        <Button
+            android:id="@+id/btn_select"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="조회"/>
@@ -68,16 +93,18 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/edit_result_name"
+            android:enabled="false"
+            android:background="@color/purple_200"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#87FF5B" />
+            android:layout_height="match_parent"/>
         <EditText
-            android:id="@+id/edit_result_people"
+            android:id="@+id/edit_result_count"
+            android:enabled="false"
+            android:background="@color/purple_200"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#87FF5B"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
 </LinearLayout>
